# LanguageSystem

./: .gitignore  CMakeLists.txt  README.md
src/: Main.qml  main.cpp
src/features/language/: LanguageController.cpp  LanguageController.h  LanguageEnum.cpp  LanguageEnum.h
translations/: app_en.ts  app_es.ts  app_fr.ts
